@@ -9,8 +9,14 @@ typeset SERVER_PORT=${2}
 
 
 java \
-    -XX:+UseBiasedLocking\
+    -XX:+UseBiasedLocking \
     -Xmx8G \
     -Xms8G \
     -Xmn4G \
+    -XX:+UseConcMarkSweepGC \
+    -XX:+UseCMSCompactAtFullCollection \
+    -XX:CMSMaxAbortablePrecleanTime=5000 \
+    -XX:+CMSClassUnloadingEnabled \
+    -XX:CMSInitiatingOccupancyFraction=80 \
+    -XX:+UseCMSInitiatingOccupancyOnly \
     -jar ./target/laser-jar-with-dependencies.jar 'server' ${DATAFILE_PATH} ${SERVER_PORT} ./laser.properties
